--- a/cadpessoas_quarkus/src/main/resources/application.yml
+++ b/cadpessoas_quarkus/src/main/resources/application.yml
@@ -1,2 +1,12 @@
 greeting:
   message: "hello"
+quarkus:
+  datasource:
+    db-king: postgresql
+    username: postgres
+    password: admin
+    jdbc:
+      url: jdbc:postgresql://0.0.0.0:5432/capacitacao
+  hibernate-orm:
+    database:
+      generation: drop-and-create
